修改输入新密码提交无提示修改成功交互

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p id="quxiao">取消</p>
             </div>
         </div>
+        <div class="tan-yes" id="tan-yes">密码修改成功</div>
     </div>
     <header>
         <div class="logo">
